test/files/pos/i20006-java/J.java
public class J {
  private String mo;
  public String mo() { return this.mo; }
}
